<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading"
        tools:ignore="NotSibling" >

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_android_cms_landing" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Loading"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_above="@id/textview2"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="65dp" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_above="@id/textview2"
            android:gravity="right|center_vertical"
            android:layout_marginRight="55dp" />


        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadingtext"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_above="@id/landingbutton" />

        <Button
            android:id="@+id/landingbutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:onClick="loginbtn"
            android:stateListAnimator="@null"
            android:text="@string/loadingbutton"
            android:textColor="@color/loading"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>