<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <View
        android:id="@+id/mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="55dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/returnBtn"
        android:layout_width="27dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_android_cms_app_bar_back"
        android:translationZ="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="UsingOnClickInXml" />

    <RelativeLayout
        android:id="@+id/loginrelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/login"
            android:includeFontPadding="false"
            android:textColor="@color/forgotresidentcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/landingedit1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Choosecommunity"
            android:textColor="@color/Choosecommunity"
            android:layout_below="@id/logintext"
            android:textSize="16dp"
            android:layout_marginTop="30dp"
            android:stateListAnimator="@null"
            android:background="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="16dp"/>

<!--        <Spinner-->
<!--            android:id="@+id/spinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_below="@id/logintext"-->
<!--            android:prompt="@string/Choosecommunity1"-->
<!--            android:spinnerMode="dialog"-->
<!--            android:background="@drawable/shape_text"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:layout_marginRight="15dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:stateListAnimator="@null" />-->

        <Button
            android:onClick="openDialog"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/logintext"
            android:background="@drawable/shape_text"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp" />

        <EditText
            android:id="@+id/landingedit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Choosecommunity2"
            android:textColor="@color/Choosecommunity"
            android:layout_below="@id/spinner"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            android:stateListAnimator="@null"
            android:background="@drawable/edit_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="16dp"/>

        <TextView
            android:onClick="forgot"
            android:id="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintext"
            android:textSize="14dp"
            android:textColor="@color/loading"
            android:layout_below="@id/landingedit"
            android:gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"/>


        <Button
            android:onClick="landingbutton3"
            android:id="@+id/landingbutton3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textColor="@color/Choosecommunity"
            android:layout_above="@id/textview4"
            android:textSize="14dp"
            android:layout_marginTop="275dp"
            android:stateListAnimator="@null"
            android:background="@drawable/shape_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="14dp"
            android:textColor="@color/Choosecommunity"
            android:layout_alignParentBottom="true"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:onClick="privacypolicy"
            android:id="@+id/textview5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Policy"
            android:textSize="14dp"
            android:textColor="@color/loading"
            android:layout_alignParentBottom="true"
            android:gravity="right|center_vertical"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>